[package]
name = "exactlyone-blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
slug = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["serde", "v4"] }
